# learn_autotools_the_hard_way

./: README.md  README.org
helloworld_linking_a/: Makefile.am  README.md  configure.ac  main.cpp
helloworld_linking_a/mylibs/: Makefile.am
helloworld_linking_so1/: Makefile.am  README.md  configure.ac
helloworld_linking_so1/mylibs/: Makefile.am  func.h
helloworld_m1/: Makefile.am  README.md  configure.ac
helloworld_m1/mymath/: func.h
helloworld_m2/: Makefile.am  README.md
helloworld_m2/mymath/: func.cpp
helloworld_s/: Makefile.am  README.md  README.org  main.cpp
library_linking_libraries_a_a/: README.md
library_linking_libraries_a_a/TEST/: Makefile.am
library_linking_libraries_a_a/myalibs/: Makefile.am  configure.ac
library_linking_libraries_a_a/myalibs/mya_1st_libs/: Makefile.am  checker.cpp  checker.h
library_linking_libraries_a_a/myalibs/mya_2nd_libs/: Makefile.am  func.h
library_linking_libraries_so_ca/: README.md
library_linking_libraries_so_ca/TEST/: Makefile.am
library_linking_libraries_so_ca/mylibs/: Makefile.am  configure.ac
library_linking_libraries_so_ca/mylibs/my_1st_libs/: Makefile.am
library_linking_libraries_so_ca/mylibs/myso_2nd_libs/: Makefile.am  func.cpp
library_s1/: README.md
library_s2/: Makefile.am  README.md  configure.ac  func.cpp
