# Use noinst_LTLIBRARIES for the purpose of "convenience library"
noinst_LTLIBRARIES = libchecker.la
libchecker_la_SOURCES = checker.cpp

# libchecker_la_LDFLAGS:
#   1. `-static` : will generate a real static library.
#   2. empty, or `-shared` : will generate a convenience library, which name is suffixed with ".a".
